client/styles/main.scss
/* ... */
.card-icon {
 float: left;
    //width: 61px;
    //height: 57px;
    margin: 20px 15px 10px 20px;
   
}

img .tax{

  width: 52px;
  height: 44px;
  //margin: 20px 10px 10px 15px;

}

img .boomerang{

  width: 37px;
  height: 41px;
  //margin: 20px 10px 10px 15px;

}

img .ralph-lauren{
  width: 37px;
  height: 41px;
  //margin: 20px 10px 50px 15px;

}

img .helicopter{
  width: 60px;
  height: 35px;
  //margin: 20px 10px 50px 15px;

}

img .free-label{
  width: 39px;
  height: 38px;
  //margin: 20px 10px 50px 15px;

}

img .market-rate{
  width: 39px;
  height: 38px;
  //margin: 20px 10px 50px 15px;

}

img .commercial-plane{
  width: 39px;
  height: 38px;
  //margin: 20px 10px 50px 15px;

}


.story-card-link {
    margin-right: 20px;
    float: right;
    font-family: $font-sans;
    font-size: 16px; 
    color: #27757b;
    border-bottom: 1px dotted #27757b;
    text-decoration: none;
    margin-bottom: 15px;

}

.story-fact-words {
  font-family: $font-sans;
  color: oColorsGetPaletteColor('grey-tint3');
  font-size: 20px;
  font-weight: 200;
  line-height: 25px;
  float: right;
  width: 240px;
  padding-right: 15px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.fact-words {

  font-family: $font-sans;
  color: oColorsGetPaletteColor('grey-tint3');
  font-size: 20px;
  font-weight: 200;
  line-height: 25px;
  padding: 20px 25px 25px 87px;
}

.figure-highlight{
  color: oColorsGetPaletteColor('claret');
  font-weight: 500;

}

.fact-words a {

   color: #27757b;
   border-bottom: 1px dotted #27757b;
   text-decoration: none;
}

.fact-card {
   border-radius: 10px;
  margin: 10px auto;
  max-width: 800px;
  background-color: white;
  border: 1px #d3d3d3;
  -webkit-box-shadow: 0px 1px 1px 0px rgba(206,198,185,1);
-moz-box-shadow: 0px 1px 1px 0px rgba(206,198,185,1);
box-shadow: 0px 1px 1px 0px rgba(206,198,185,1);
}

.o-grid-container {
  margin-top: 30px;
  margin-bottom: 10px;
  }

.viz {
  border-top: 1px solid oColorsGetPaletteColor('pink-tint2');
  border-bottom: 1px solid oColorsGetPaletteColor('pink-tint2');
  margin: 15px auto;
  position: relative;
}


 .panel {
  background-color: rgba(253, 248, 242, 0.92);
  max-width: 315px;
  padding: 20px;
  box-sizing: border-box;
 }

.mobile-annotations {
  display: hidden;

}

.o-buttons--big {
    padding: 10px 20px 10px 20px;
    font-size: 20px;
    border-width: 1px;
}

.slideCounter{
  margin-left: 10px;
  color: oColorsGetPaletteColor('grey-tint4');
}

.slideCounter-number{
  font-weight: 600;
  color: oColorsGetPaletteColor('grey-tint5');
}

.annotation {
  color: oColorsGetPaletteColor('grey-tint4');
  clear: both;
  padding: 15px 10px 10px 0px;
  font-size: 18px;
  font-weight: 200;
  line-height: 25px;
 
}

rect {
  stroke-width: 1px;
  stroke: red;
}


.label { 
  text-anchor: end; 
}


.chart-title { 
    color: oColorsGetPaletteColor('grey-tint5');
    padding: 20px 0 5px 0;
    font-size: 25px;
    font-weight: 300;
    display: block;
}

.chart-subtitle { 
  color: oColorsGetPaletteColor('grey-tint3');
  font-size: 18px;
  display: block;
}

.chart-source { 
  color: oColorsGetPaletteColor('grey-tint3');
  font-size: 14px;
  display: inline-block;
  padding: 10px;

}

.buttonHolder {
  display:block;
  margin-top:20px;
}

.buttonHolder > * {
  margin-right: 5px;
}

.o-buttons__pagination{
  display: block;
  float:right;

}

.o-buttons__pagination::before{
  padding-right: 7px;
  content:"1 of 9"
}

p .page-links{
  margin-top: 60px;
}

.page-links {
  //margin-top: 20px;
  font-family: $font-sans;
  font-size: 21px; 
  font-weight: 200;
    color: #27757b;
    border-bottom: 1px dotted #27757b;
    text-decoration: none;
}

.github-link{
  margin: 30px 0px 30px 80px;

}



.chart-link{
  margin-bottom: 20px
}

.circles {
  stroke: oColorsGetPaletteColor('claret');
  fill-opacity: 0.5;
  stroke-width: 0.5px;
  fill: oColorsGetPaletteColor('claret');
}

.circles.highlight {
  fill: oColorsGetPaletteColor('claret');

}

.secLine {
  opacity:0;
  stroke: oColorsGetPaletteColor('grey-tint5');
  stroke-width: 1px;
  stroke-dasharray: 4, 3;
}

.secLine-text {
  font-size: 13px;
  letter-spacing: 0.3;
}

.cumulativeRect {
  opacity:0.1;
}

.axes path, .axes line {
  fill: none;
  stroke: #a7a59a;
  shape-rendering: crispEdges;
}

article h3{
  margin-top: 30px;
}

.standfirst-link{
  color: #27757b;
    border-bottom: 1px dotted #27757b;
    text-decoration: none;

}

.axes text {
  font-family: $font-sans;
  font-size: 16px;
  font-weight: 200;
  fill: #a7a59a;
  shape-rendering: crispEdges;
}

.yAxis text {
  text-anchor: end;

}

.yAxis line {
  stroke-dasharray: 1 , 4;
  stroke: #a7a59a;
}

.yAxis path {
  display: none;
}

.chart-xaxis-label {
  font-size: 16px;
}

.chart-xaxis-label-middle {
  font-size: 17px;
  font-weight: 600;
  fill: oColorsGetPaletteColor('grey-tint3');
}

.chart-xaxis-label-left, .chart-xaxis-label-right {
  font-size: 17px;
  font-weight: 400;
  fill: oColorsGetPaletteColor('grey-tint3');  
}

.chart-xaxis-label-right-arrow, .chart-xaxis-label-left-arrow {
    font-size: 12px;
    fill: oColorsGetPaletteColor('grey-tint3');  
}

section{
  border-top: 1px solid oColorsGetPaletteColor('pink-tint3');
  margin: 20px auto;
  max-width: 620px
}

.download-data-container{
  display: flex;
  flex-direction:row;

}

.download-csv{
  padding-right: 10px;
  cursor:pointer;
}

section h3 {
 
      margin-top: 20px;
    margin-bottom: 10px;
  
}

section ul,
section p {
 font-family: $font-sans;
    font-size: 17px;
    line-height: 22px;
 color:oColorsGetPaletteColor('grey-tint3');
}


section li {
  padding-bottom: 20px;
}

.link-container{
  display: flex;
  flex-direction:column;
  justify-content:center;
  max-width: 320px;
  text-align: center;
  margin: 0 auto 20px;
}

article{
  margin:0 auto;
  padding-bottom: 20px;
  max-width:620px;
}
/* ... */

